<resources>
    <string name="app_name">K7 Bank</string>

    //ExtractFragment
    <string name="extract">Extrato</string>
    <string name="your_balance">Seu Saldo</string>
    <string name="rs">R$</string>
    <string name="your_movements">Suas Movimentações</string>
    <string name="pix">Pix</string>

    //ReceiptFragment
    <string name="receipt">Comprovante</string>
    <string name="type_of_movement">Tipo de movimentação</string>
    <string name="value">Valor</string>
    <string name="receiver">Recebedor</string>
    <string name="banking_institution">Instituição bancaria</string>
    <string name="date_hour">Data/Hora</string>
    <string name="trace">-</string>
    <string name="authentication">Autenticação</string>
    <string name="share">Compartilhar</string>
    <string name="send_to">Send To</string>

    //Alert Dialog
    <string name="dialog_title">Erro</string>
    <string name="alert_dialog_message">Ocoreu um erro inesperado tente novamente mais tarde!</string>
    <string name="alert_dialog_button">OK</string>


</resources>