<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.receipt.ReceiptFragment">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/AppStyle.Toolbar">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:backgroundTint="@color/transparent"/>

    </androidx.appcompat.widget.Toolbar>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_receipt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/receipt"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        />

    <View
        android:id="@+id/view_line"
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/gray" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_type_of_movement_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_of_movement"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginStart="8dp"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_type_of_movement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Transferência enviada"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        />




</LinearLayout>