<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.extract.ExtractFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/extract"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginTop="24dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/light_gray"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_balance"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rs"
                android:textColor="@color/green_200"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginStart="24dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/extract_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="1.345,00"
                android:textStyle="bold"
                android:textColor="@color/green_200"
                android:textSize="18sp"
                android:layout_marginBottom="16dp"
                />

        </LinearLayout>

    </LinearLayout>








</LinearLayout>